# solaris-software

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  Docu  LICENSE.md  README.md  gpio_int.c  gpio_int.h  update.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup-terminal.sh  update.sh
.forgejo/workflows/: build-solaris-code.yml  static-check-c-language.yml
.github/workflows/: build-solaris-code.yml
icm20948/: Cargo.toml
json/: devcontainer.json_linux  devcontainer.json_windows
main/: Cargo.toml
solaris-v0.1/: CMakeLists.txt
solaris-v0.1/components/pressure_sensor_driver/: CMakeLists.txt  README_BMP390.md  bmp390.c
solaris-v0.1/components/pressure_sensor_driver/include/: bmp390.h
solaris-v0.1/main/: CMakeLists.txt  main.c
solaris-v0.2/: .clangd  CMakeLists.txt
solaris-v0.2/components/icm_driver/: README_ICM20948.md
solaris-v0.2/main/: CMakeLists.txt  main.c
solaris-v1/: CMakeLists.txt  Cargo.toml  build.sh  sdkconfig
solaris-v1/.cargo/: config.toml
solaris-v1/components/general/: CMakeLists.txt  general.c  general.h  gpio_int.c  gpio_int.h  macros.h
solaris-v1/components/icm_driver/: CMakeLists.txt  icm20948.c
solaris-v1/components/icm_driver/include/: icm20948.h
solaris-v1/components/icm_driver/test/: CMakeLists.txt  test_imu_spi.c
solaris-v1/components/imu_driver/: CMakeLists.txt  imu_driver.c  mpu9250.c
solaris-v1/components/pressure_sensor_driver/: CMakeLists.txt  README_BMP390.md  bmp390.c  pressure_sensor.c
solaris-v1/components/spp_port/: CMakeLists.txt
solaris-v1/components/spp_port_wrapper/: CMakeLists.txt
solaris-v1/components/spp_wrapper/: CMakeLists.txt
solaris-v1/main/: CMakeLists.txt  main.c
src/: CMakeLists.txt  sdkconfig  sdkconfig.old
src/main/: CMakeLists.txt  pressure_sensor.c  pressure_sensor.h  src.c
(+9 files in other folders)
